--- a/index.html
+++ b/index.html
@@ -4,49 +4,108 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Login & Signup</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #6a11cb, #fc7b25);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
     }
 
-    .hero {
+    .container {
+      width: 350px;
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 6px 15px rgba(169, 59, 59, 0.388);
       text-align: center;
-      padding: 50px 20px;
-      background: #f8f9fa;
     }
 
-    .hero img {
-      width: 180px;
-      height: 180px;
-      border-radius: 30%;
-      object-fit: cover;
-      border: 4px solid #ddd;
+    h2 {
       margin-bottom: 20px;
+      color: #333;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 14px;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      background: #6f79c6;
+      color: rgb(0, 0, 0);
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: #882929;
+    }
+
+    .toggle {
+      margin-top: 15px;
+      font-size: 14px;
+    }
+
+    .toggle a {
+      color: #ff0000;
+      text-decoration: none;
+      cursor: pointer;
     }
   </style>
 </head>
 
 <body>
+  <div class="container">
+    <!-- Login Form -->
+    <div id="loginForm">
+      <h2>Login</h2>
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
+      <a href="index.html"><button> Login</button></a>
+      <div class="toggle">
+        Don't have an account? <a onclick="showSignup()">Sign up</a>
+      </div>
+    </div>
 
-  <div class="hero">
-    <img src="image.jpg" alt="My Photo">
-    <h1>Hi, I'm Arhat</h1>
-    <p>Web Developer | Designer | Creator</p>
-  </div>
-  <div class="container my-5 text-center">
-    <h2>About Me</h2>
-    <p>Hello! I'm passionate about building beautiful and functional websites.
-      I enjoy learning new technologies and creating unique digital experiences.</p>
-  </div>
-
-  <div class="container my-5 text-center">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:arhatshah0@email.com">arhatshah0@email.com</a></p>
+    <!-- Signup Form -->
+    <div id="signupForm" style="display:none;">
+      <h2>Sign Up</h2>
+      <input type="text" placeholder="Full Name" required>
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
+      <input type="password" placeholder="Confirm Password" required>
+      <button>Sign Up</button>
+      <div class="toggle">
+        Already have an account? <a onclick="showLogin()">Login</a>
+      </div>
+    </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function showSignup() {
+      document.getElementById("loginForm").style.display = "none";
+      document.getElementById("signupForm").style.display = "block";
+    }
+
+    function showLogin() {
+      document.getElementById("signupForm").style.display = "none";
+      document.getElementById("loginForm").style.display = "block";
+    }
+  </script>
 </body>
 
 </html>
