--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <h2>Login</h2>
       <input type="email" placeholder="Email" required>
       <input type="password" placeholder="Password" required>
-      <a href="index.html"><button> Login</button></a>
+      <a href="login.html"><button> Login</button></a>
       <div class="toggle">
         Don't have an account? <a onclick="showSignup()">Sign up</a>
       </div>
@@ -109,3 +109,4 @@
 </body>
 
 </html>
+
