--- a/index.html
+++ b/index.html
@@ -1,112 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login & Signup</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #6a11cb, #fc7b25);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login / Signup</title>
 
-    .container {
-      width: 350px;
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 6px 15px rgba(169, 59, 59, 0.388);
-      text-align: center;
-    }
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet" />
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap');
 
-    h2 {
-      margin-bottom: 20px;
-      color: #333;
-    }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 14px;
-    }
+body {
+  font-family: 'Poppins', sans-serif;
+  background: #f5f7fa;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #333;
+}
 
-    button {
-      width: 100%;
-      padding: 12px;
-      background: #6f79c6;
-      color: rgb(0, 0, 0);
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+.container {
+  width: 380px;
+  background: #fff;
+  padding: 40px 30px;
+  border-radius: 16px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+  border: 1px solid #e2e8f0;
+}
 
-    button:hover {
-      background: #882929;
-    }
+.toggle-buttons {
+  display: flex;
+  margin-bottom: 30px;
+  border-radius: 12px;
+  background: #f1f3f5;
+  overflow: hidden;
+  border: 1px solid #d1d5db;
+}
 
-    .toggle {
-      margin-top: 15px;
-      font-size: 14px;
-    }
+.toggle-buttons button {
+  flex: 1;
+  padding: 14px 0;
+  background: transparent;
+  color: #4b5563; /* cool gray */
+  border: none;
+  font-weight: 600;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  border-radius: 0;
+  letter-spacing: 0.5px;
+}
 
-    .toggle a {
-      color: #ff0000;
-      text-decoration: none;
-      cursor: pointer;
-    }
-  </style>
+.toggle-buttons button.active {
+  background: #3b82f6; /* blue */
+  color: #fff;
+  box-shadow: 0 4px 12px rgba(59,130,246,0.4);
+}
+
+.form {
+  display: none;
+  flex-direction: column;
+  gap: 18px;
+  animation: fadeIn 0.4s ease;
+}
+
+.form.active {
+  display: flex;
+}
+
+.form h2 {
+  text-align: center;
+  font-size: 26px;
+  font-weight: 700;
+  color: #111827;
+  margin-bottom: 20px;
+}
+
+input {
+  padding: 14px 16px;
+  border-radius: 10px;
+  border: 1.5px solid #cbd5e1;
+  background: #f9fafb;
+  font-size: 15px;
+  color: #111827;
+  transition: border-color 0.3s ease;
+  outline: none;
+}
+
+input::placeholder {
+  color: #9ca3af;
+}
+
+input:focus {
+  border-color: #3b82f6;
+  background: #fff;
+  box-shadow: 0 0 8px rgba(59, 130, 246, 0.4);
+}
+
+button[type="submit"] {
+  background-color: #3b82f6;
+  color: #fff;
+  padding: 14px;
+  border: none;
+  border-radius: 12px;
+  font-weight: 700;
+  font-size: 17px;
+  cursor: pointer;
+  letter-spacing: 0.7px;
+  box-shadow: 0 6px 18px rgba(59, 130, 246, 0.4);
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+button[type="submit"]:hover {
+  background-color: #2563eb;
+  box-shadow: 0 8px 24px rgba(37, 99, 235, 0.6);
+}
+
+/* Social login */
+.social-login {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.social-login p {
+  color: #6b7280;
+  font-size: 14px;
+  margin-bottom: 12px;
+}
+
+.social-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.social-buttons a {
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+  transition: transform 0.3s ease;
+}
+
+.social-buttons a:hover {
+  transform: scale(1.1);
+}
+
+.google { background: #db4437; }
+.facebook { background: #1877f2; }
+.twitter { background: #1da1f2; }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(8px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Responsive */
+@media (max-width: 480px) {
+  .container {
+    width: 90%;
+    padding: 30px 20px;
+  }
+}
+</style>
+
+<!-- FontAwesome for icons -->
+<script src="https://kit.fontawesome.com/2f0e5b2d5d.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
   <div class="container">
-    <!-- Login Form -->
-    <div id="loginForm">
-      <h2>Login</h2>
-      <input type="email" placeholder="Email" required>
-      <input type="password" placeholder="Password" required>
-      <a href="login.html"><button> Login</button></a>
-      <div class="toggle">
-        Don't have an account? <a onclick="showSignup()">Sign up</a>
-      </div>
+    <div class="toggle-buttons">
+      <button id="show-login" class="active">Login</button>
+      <button id="show-register">Register</button>
     </div>
 
-    <!-- Signup Form -->
-    <div id="signupForm" style="display:none;">
-      <h2>Sign Up</h2>
-      <input type="text" placeholder="Full Name" required>
-      <input type="email" placeholder="Email" required>
-      <input type="password" placeholder="Password" required>
-      <input type="password" placeholder="Confirm Password" required>
-      <button>Sign Up</button>
-      <div class="toggle">
-        Already have an account? <a onclick="showLogin()">Login</a>
+    <!-- Login Form -->
+    <form id="login-form" class="form active" method="POST" action="auth.php">
+      <h2>Login</h2>
+      <input type="hidden" name="action" value="login">
+      <input type="email" name="email" placeholder="Email" required>
+      <input type="password" name="password" placeholder="Password" required>
+      <button type="submit">Login</button>
+
+      <!-- Social login -->
+      <div class="social-login">
+        <p>Or login with</p>
+        <div class="social-buttons">
+          <a href="#" class="google"><i class="fab fa-google"></i></a>
+          <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+        </div>
       </div>
-    </div>
+    </form>
+
+    <!-- Signup Form -->
+    <form id="register-form" class="form" method="POST" action="auth.php">
+      <h2>Register</h2>
+      <input type="hidden" name="action" value="register">
+      <input type="text" name="username" placeholder="Username" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <input type="password" name="password" placeholder="Password" required>
+      <button type="submit">Register</button>
+
+      <!-- Social signup -->
+      <div class="social-login">
+        <p>Or sign up with</p>
+        <div class="social-buttons">
+          <a href="#" class="google"><i class="fab fa-google"></i></a>
+          <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+    </form>
   </div>
 
   <script>
-    function showSignup() {
-      document.getElementById("loginForm").style.display = "none";
-      document.getElementById("signupForm").style.display = "block";
-    }
+    const loginForm = document.getElementById('login-form');
+    const registerForm = document.getElementById('register-form');
+    const showLogin = document.getElementById('show-login');
+    const showRegister = document.getElementById('show-register');
 
-    function showLogin() {
-      document.getElementById("signupForm").style.display = "none";
-      document.getElementById("loginForm").style.display = "block";
-    }
+    showLogin.onclick = () => {
+      loginForm.classList.add('active');
+      registerForm.classList.remove('active');
+      showLogin.classList.add('active');
+      showRegister.classList.remove('active');
+    };
+
+    showRegister.onclick = () => {
+      registerForm.classList.add('active');
+      loginForm.classList.remove('active');
+      showRegister.classList.add('active');
+      showLogin.classList.remove('active');
+    };
   </script>
 </body>
-
 </html>
-
