--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background: #f5f7fa;
+  background: linear-gradient(135deg, #00c9a7, #6a11cb);
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -197,7 +197,7 @@ button[type="submit"]:hover {
       <input type="hidden" name="action" value="login">
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
-      <button type="submit">Login</button>
+     <button type="submit" onclick="event.preventDefault(); window.location.href='pf.html'">Login</button>
 
       <!-- Social login -->
       <div class="social-login">
