--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login / Signup</title>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet" />
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap');
@@ -121,45 +121,14 @@ button[type="submit"]:hover {
   background-color: #2563eb;
   box-shadow: 0 8px 24px rgba(37, 99, 235, 0.6);
 }
-
-/* Social login */
-.social-login {
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
   text-align: center;
-  margin-top: 15px;
-}
-
-.social-login p {
-  color: #6b7280;
-  font-size: 14px;
-  margin-bottom: 12px;
-}
-
-.social-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-}
-
-.social-buttons a {
-  width: 42px;
-  height: 42px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  font-size: 18px;
   text-decoration: none;
-  transition: transform 0.3s ease;
+  border-radius: 50%;
 }
-
-.social-buttons a:hover {
-  transform: scale(1.1);
-}
-
-.google { background: #db4437; }
-.facebook { background: #1877f2; }
-.twitter { background: #1da1f2; }
 
 @keyframes fadeIn {
   from {
@@ -198,16 +167,6 @@ button[type="submit"]:hover {
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
      <button type="submit" onclick="event.preventDefault(); window.location.href='pf.html'">Login</button>
-
-      <!-- Social login -->
-      <div class="social-login">
-        <p>Or login with</p>
-        <div class="social-buttons">
-          <a href="#" class="google"><i class="fab fa-google"></i></a>
-          <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-        </div>
-      </div>
     </form>
 
     <!-- Signup Form -->
@@ -218,19 +177,18 @@ button[type="submit"]:hover {
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
       <button type="submit">Register</button>
-
+</form>
+<br>
       <!-- Social signup -->
       <div class="social-login">
-        <p>Or sign up with</p>
-        <div class="social-buttons">
-          <a href="#" class="google"><i class="fab fa-google"></i></a>
-          <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-        </div>
+        <p text align="center">Or sign up with
+          <br>
+         <a href="#" class="fa fa-google"></a>&nbsp;
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+</p>
       </div>
-    </form>
-  </div>
-
+    
   <script>
     const loginForm = document.getElementById('login-form');
     const registerForm = document.getElementById('register-form');
